--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/swiper": "^5.4.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-paginate": "^8.2.0",
+    "sass": "^1.83.1",
+    "swiper": "^11.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
