--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "vite",
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint . --fix",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "fix-style": "npm run format & npm run lint",
     "preview": "vite preview",
     "prepare": "husky install"
