--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "fix-style": "npm run format & npm run lint",
     "preview": "vite preview",
     "prepare": "husky install"
   },
   "dependencies": {
     "@types/swiper": "^5.4.3",
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^7.1.1",
     "sass": "^1.83.1",
-    "swiper": "^11.2.0"
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
