--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^7.1.1",
+    "react-swipeable": "^7.0.2",
     "sass": "^1.83.1",
     "swiper": "^11.2.1"
   },
